MDEV-31636 Memory leak in Sys_var_gtid_binlog_state::do_check()

Move memory allocations performed during Sys_var_gtid_binlog_state::do_check
to Sys_var_gtid_binlog_state::global_update where they will be freed before
the latter method returns.